fixed issue with random white space under the footer

--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 220vh;
     margin: 0;
     height: 100%;
 }
